Switched from sqlite database to postgresql, updated readme.md file for better readability, some features had been fixed such as changing post information in forum

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -28,8 +28,8 @@
 
 .login-card{
   padding: 200px;
-  background-color: white;
   width: 50%;
   height: 100vh;
+  background-color: white
 /*   border: solid red 1px;
  */}
